force-app/main/default/objects/DAU_Salesforce_Tarjetas__e/DAU_Salesforce_Tarjetas__e.object-meta.xml
<CustomObject>
    <label>DAU_Salesforce_Tarjetas</label>
    <pluralLabel>DAU_Salesforce_Tarjetas</pluralLabel>
</CustomObject>