force-app/main/default/objects/DAU_Salesforce_Tarjetas__e/fields/DAU_Borrar_Cuotas_S10__c.field-meta.xml
<CustomField>
    <fullName>DAU_Borrar_Cuotas_S10__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bandera para borrar las cuotas del saldo 10 en la gestión de Afiliación de débito automático.</description>
    <label>DAU_Borrar Cuotas S10</label>
    <type>Checkbox</type>
</CustomField>