force-app/main/default/objects/DAU_Salesforce_Tarjetas__e/fields/DAU_CuartoServicio__c.field-meta.xml
<CustomField>
    <fullName>DAU_CuartoServicio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DAU_CuartoServicio</label>
    <type>Checkbox</type>
</CustomField>