force-app/main/default/objects/DAU_Salesforce_Tarjetas__e/fields/DAU_EjecutarSYSDE__c.field-meta.xml
<CustomField>
    <fullName>DAU_EjecutarSYSDE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DAU_EjecutarSYSDE</label>
    <type>Checkbox</type>
</CustomField>