force-app/main/default/objects/DAU_Salesforce_Tarjetas__e/fields/DAU_EjecutarSYSDEOper__c.field-meta.xml
<CustomField>
    <fullName>DAU_EjecutarSYSDEOper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bandera cuando el caso es aprobado desde Operaciones.</description>
    <label>DAU_EjecutarSYSDEOperaciones</label>
    <type>Checkbox</type>
</CustomField>