force-app/main/default/objects/DAU_Salesforce_Tarjetas__e/fields/DAU_EjecutarSYSDEOperaciones__c.field-meta.xml
<CustomField>
    <fullName>DAU_EjecutarSYSDEOperaciones__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DAU_EjecutarSYSDEOperaciones</label>
    <type>Checkbox</type>
</CustomField>