force-app/main/default/objects/DAU_Salesforce_Tarjetas__e/fields/DAU_IdCaso__c.field-meta.xml
<CustomField>
    <fullName>DAU_IdCaso__c</fullName>
    <label>DAU_IdCaso</label>
    <length>50</length>
    <type>Text</type>
</CustomField>