force-app/main/default/objects/DAU_Salesforce_Tarjetas__e/fields/DAU_NumeroCuenta__c.field-meta.xml
<CustomField>
    <fullName>DAU_NumeroCuenta__c</fullName>
    <label>DAU_NúmeroCuenta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>