force-app/main/default/objects/DAU_Salesforce_Tarjetas__e/fields/DAU_PrimerServicio__c.field-meta.xml
<CustomField>
    <fullName>DAU_PrimerServicio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DAU_PrimerServicio</label>
    <type>Checkbox</type>
</CustomField>