force-app/main/default/objects/DAU_Salesforce_Tarjetas__e/fields/DAU_SegundoServicio__c.field-meta.xml
<CustomField>
    <fullName>DAU_SegundoServicio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ejecutar segundo llamado de servicio</description>
    <label>DAU_SegundoServicio</label>
    <type>Checkbox</type>
</CustomField>