force-app/main/default/objects/DAU_Salesforce_Tarjetas__e/fields/DAU_TercerServicio__c.field-meta.xml
<CustomField>
    <fullName>DAU_TercerServicio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DAU_TercerServicio</label>
    <type>Checkbox</type>
</CustomField>